# high-order-implicit-representation

./: .gitignore  Pipfile  README.md  high_order_mlp.py  implicit_images.py  implicit_neighborhood.py  language_interpolation.py  parquet_shrinker.py  pyproject.toml  single_image_dataset.py  single_text_dataset.py
.github/workflows/: python-app.yml
books/: the_raven.txt
config/: generative_config.yaml  images_config.yaml  language_config.yaml  neighborhood_config.yaml  random_interpolation.yaml
config/optimizer/: sparse_lion.yaml
examples/: implicit_images.py  implicit_neighborhood.py  random_interpolation.py  text_to_image.py
high_order_implicit_representation/: networks.py  random_sample_dataset.py  rendering.py  single_image_dataset.py  utils.py
test_data/: test.parquet
tests/: test.py  test_network.py  test_random_sample_dataset.py  test_rendering.py  test_single_image_dataset.py  test_utils.py
