[tool.poetry]
name = "high-order-implicit-representation"
version = "0.2.0"
description = ""
authors = ["John Loverich <john.loverich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
hydra-core = "^1.2.0"
Pillow = "^9.1.1"
matplotlib = "^3.5.2"
scikit-image = "^0.19.3"
omegaconf = "^2.2.2"
hydra-nevergrad-sweeper = "1.3.0.dev0"
torch-optimizer = "^0.3.0"
torchsummary = "^1.5.1"
pytorch-lightning = "^1.8.3"
high-order-layers-torch = "^1.2.6"
torchvision = "^0.14.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
tensorboard = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
