[tool.poetry]
name = "high-order-implicit-representation"
version = "1.0.0"
description = ""
authors = ["John Loverich <john.loverich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
hydra-core = "^1.2.0"
Pillow = "^9.1.1"
matplotlib = "^3.5.2"
scikit-image = "^0.19.3"
omegaconf = "^2.2.2"
hydra-nevergrad-sweeper = "1.3.0.dev0"
torch-optimizer = "^0.3.0"
torchsummary = "^1.5.1"
high-order-layers-torch = "^2.4.1"
torchvision = "^0.16.2"
pytorch-lightning = "^2.1.3"
pandas = "^2.2.2"
fastparquet = "^2024.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
tensorboard = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
