[tool.poetry]
name = "high-order-implicit-representation"
version = "1.0.0"
description = ""
authors = ["John Loverich <john.loverich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
hydra-core = "^1.2.0"
matplotlib = "^3.5.2"
omegaconf = "^2.2.2"
torch-optimizer = "^0.3.0"
torchsummary = "^1.5.1"
pytorch-lightning = "^2.1.3"
pandas = "^2.2.2"
fastparquet = "^2024.2.0"
sentence-transformers = "^2.7.0"
numpy = "^1.26.4"
pillow = "^10.3.0"
high-order-layers-torch = "^2.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
tensorboard = "^2.9.1"

[tool.poetry.group.dev.dependencies]
click = "^8.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
